openmediavault (7.3.0-1) stable; urgency=low

  * Refactor the RPC parameter handling.
  * Issue #1774: Improve foundation for plugins.
  * Refactor UI to get rid of `::ng-deep`, which was an obstacle to
    migrating to Angular >= 15.

 -- Volker Theile <volker.theile@openmediavault.org>  Tue, 11 Jun 2024 17:45:42 +0200

openmediavault (7.2.1-1) stable; urgency=low

  * Refactor the `download.php` RPC infrastructure.
  * Issue #1748: Enable TCP for NFS v2 and v3.
  * Issue #1766: Harden the daily SSL certificate expiration cron job.
  * Issue #1769: Add support for setting SMTP server to `localhost` in
    notification settings page.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 24 May 2024 17:46:40 +0200

openmediavault (7.1.1-1) stable; urgency=low

  * Remove NFS configuration file that is generated on upgrade to
    Debian 12.
  * Issue #1763: Allow creating logical volumes even if a file
    system signature is detected.

 -- Volker Theile <volker.theile@openmediavault.org>  Mon, 13 May 2024 19:09:22 +0200

openmediavault (7.1.0-2) stable; urgency=low

  * Update locale files.
  * Issue #1731: Display file system details.
  * Issue #1736: Add support to create yearly scheduled shared
    folder snapshots.
  * Issue #1737: Add support for WPA3 authentication for wireless
    connections.

 -- Volker Theile <volker.theile@openmediavault.org>  Fri, 29 Mar 2024 19:22:33 +0100

openmediavault (7.0.4-2) stable; urgency=low

  * Replace hdparm with smartctl in UDEV helper script.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 16 Mar 2024 12:33:17 +0100

openmediavault (7.0.3-1) stable; urgency=low

  * Add functionality required by plugins.

 -- Volker Theile <volker.theile@openmediavault.org>  Sat, 16 Mar 2024 11:05:17 +0100

openmediavault (7.0.2-2) stable; urgency=low

  * Fix problem when deploying file system quota.
  * Issue #1725: Add search field to shared folder page.
